--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -41,7 +41,7 @@
           </p>
         </a>
         <a href="https://github.com/NatanimA/Social-Media-Blog" target="_blank" class="project project-tile">
-          <img class="project-image" src="./blog.jpg" alt="project">
+          <img class="project-image" src="./media/blog.jpg" alt="project">
           <p class="project-title">
             <span class="code">&lt;</span>
             Social Media Blog
