--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -12,14 +12,14 @@
     <nav id='navbar'>
       <ul id="nav-list">
         <li><a href="#welcome-section">About</a></li>
-        <li><a href="#projects">>Work</a</li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="#projects">Work</a</li>
+        <li><a href="#contact">Contact</a></li>
 
       </ul>
     </nav>
     <section id="welcome-section">
-      <h1>Hey I am Mimic</h1>
-      <p>a web developer</p>
+      <h1>Hey this is Natanim and James</h1>
+      <p>we are web developers</p>
     </section>
     <section id="projects">
       <h2 class="projects-section-header">These are some of my projects</h2>
@@ -27,26 +27,18 @@
         <a href="https://github.com/NatanimA/TributePage" target="_blank" class="project project-tile">
           <img class="project-image" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute.jpg" alt="project">
           <p class="project-title">
-            <span class="code">&lt;</span>
-            Tribute Page
-            <span class="code">/&gt;</span>
+            <span class="code">Tribute Page</span>
           </p>
         </a>
         <a href="https://github.com/NatanimA/Monsters-Rolodex" target="_blank" class="project project-tile">
-          <img class="project-image" src="./media/Monsters.png" alt="project">
+          <img class="project-image" src="./media/images.jfif" alt="project">
           <p class="project-title">
-            <span class="code">&lt;</span>
-            Monsters Rolodex
-            <span class="code">/&gt;</span>
+            <span class="code">Monsters Rolodex</span>
           </p>
         </a>
         <a href="https://github.com/NatanimA/Social-Media-Blog" target="_blank" class="project project-tile">
           <img class="project-image" src="./media/blog.jpg" alt="project">
-          <p class="project-title">
-            <span class="code">&lt;</span>
-            Social Media Blog
-            <span class="code">/&gt;</span>
-          </p>
+          <p class="project-title"> Social Media Blog </p>
         </a>
       </div>
       <a href="https://github.com/NatanimA?tab=repositories" class="btn btn-show-all" target="_blank">Show all<i class="fas fa-chevron-right"></i></a>
@@ -69,10 +61,8 @@
 
     <footer>
       <p>
-        © Created for
-        <a href=https://github.com/NatanimA/" target="_blank">GitHub <i class="fab fa-github"></i></a>
+        © Created for Microverse Trials.
       </p>
     </footer>
-
   </body>
 </html>
